--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Ecommerce app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start-server": "nodemon server.js"
   },
   "author": "Gaurav Arora",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.18",
+    "nodemon": "^2.0.7"
   }
 }
